# dslr

./: .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  Makefile  example.rs  flake.nix  shell.nix
.github/workflows/: rust.yml  typos.yml
datasets/: irelevant.csv  relevant.csv
src/analyze/: Cargo.toml
src/analyze/src/: lib.rs
src/data_visualization/: Cargo.toml
src/data_visualization/src/: feature.rs  hist_test.rs  histogram.rs  label.rs  layout.rs  lib.rs  main.rs  pair_plot.rs  parse_cols.rs  plot.rs  pp_test.rs  scatter.rs  scatter_plot.rs  tmp.rs  trace.rs  write_trace.rs
src/describe/: Cargo.toml
src/describe/src/: compute.rs  main.rs
src/describe/src/describe/: compute.rs  mod.rs  present.rs
src/float/: Cargo.toml
src/hypothesis/: Cargo.toml
src/hypothesis/src/: lib.rs
src/load/: Cargo.toml
src/load/src/: lib.rs
src/model/: Cargo.toml
src/model/src/: lib.rs
src/neural_network/: Cargo.toml
src/neural_network/src/: activation.rs  layer.rs  lib.rs  matrix.rs
src/neural_network/src/activation/: mod.rs  relu.rs  sigmoid.rs
src/predict/: Cargo.toml
src/predict/src/: main.rs  predict.rs
src/some_binary/: Cargo.toml
src/some_binary/src/: main.rs
src/some_lib/: Cargo.toml
src/some_lib/src/: lib.rs
src/train/: Cargo.toml
src/train/src/: group.rs  learn.rs  loss.rs  main.rs  prepare.rs
src/train/src/prepare/: mod.rs  normalize.rs  parse.rs
src/visualize/: Cargo.toml
src/visualize/src/: annotation.rs  args.rs  feature.rs  histogram.rs  label.rs  layout.rs  lib.rs  pair.rs  plot_type.rs  populate.rs  scatter.rs  trace.rs
