[package]
name = "analyze"
version = "0.1.0"
edition = "2021"
authors = [
	"jucapik <jucapik@student.42.fr>",
	"adelille <adelille@student.42.fr>",
]
description = "analyze a polars Series"

[dependencies]
float = { path = "../float" }
polars = { version = "0.43", default-features = false, features = [
	"performant",
] }
