[package]
name = "data_visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

load = { path = "../load" }

chrono = "0.4.38"
clap = { version = "4.5.18", features = ["cargo"]}
csv = "1.3.0"
exitcode = "1.1.2"
file = "1.1.2"
itertools-num = "0.1.3"
plotly = { version = "0.10", features = ["kaleido"] }
plotly_kaleido = "0.10"
polars = { version = "0.42.0", features = [
    "csv",
    "lazy",
    "performant",
    "dtype-datetime",
    "strings",
] }
rand = "0.8.5"
rand_distr = "0.4.3"
