[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"
authors = [
	"jucapik <jucapik@student.42.fr>",
	"adelille <adelille@student.42.fr>",
]
description = "neural network implementation"

[dependencies]
polars = { version = "0.41", default-features = false, features = [
	"performant",
] }
